fix misAlignments

--- a/theme/guru/style/custom_scss/_card.scss
+++ b/theme/guru/style/custom_scss/_card.scss
@@ -40,8 +40,10 @@
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 21px;
     min-height: 85px;
+    max-height: 85px;
+    overflow: hidden;
 }
 
 
