--- a/theme/guru/style/scss.css
+++ b/theme/guru/style/scss.css
@@ -1062,8 +1062,10 @@ ul.pagination li.active {
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 21px;
   min-height: 85px;
+  max-height: 85px;
+  overflow: hidden;
 }
 
 .card-text p {
